@@ -1,5 +1,9 @@
 = Changelog
 
+== next maintenance
+
+* CHANGED: run test against Rails ~> 2.3.0 but ensure compatibility with Rails 2.2.x.
+
 
 == Release 0.1.0
 
